[package]
name = "cs2vc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"

[target.'cfg(windows)'.dependencies]
ort = { version = "2.0.0-rc.8", features = ["directml"] }
windows-capture = "1.4.1"

[target.'cfg(unix)'.dependencies]
ort = { version = "2.0.0-rc.8", features = ["coreml"] }

[target.aarch64-apple-darwin]
rustflags = ["-Clink-arg=-fapple-link-rtlib"]

[target.x86_64-apple-darwin]
rustflags = ["-Clink-arg=-fapple-link-rtlib"]